# granite

./: AGENTS.md  CLAUDE.md  Cargo.toml
docs/: spec.md
src/: config.rs  frontmatter.rs  git.rs  index.rs  main.rs  vault.rs  wikilink.rs
src/commands/: context.rs  daily.rs  edit.rs  init.rs  link.rs  links.rs  list.rs  mod.rs  new.rs  rename.rs  search.rs  serve.rs  sync.rs  tags.rs  view.rs
tests/: cli.rs
